gitops/base/gitea/gitea-interceptor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-interceptor
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-interceptor
  template:
    metadata:
      labels:
        app: gitea-interceptor
    spec:
      serviceAccountName: tekton-triggers-core-interceptors
      containers:
        - name: gitea-interceptor
          image: quay.io/cgruver0/gitea-interceptor:latest
          args: ["-logtostderr", "-stderrthreshold", "INFO"]
          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea-interceptor
  name: gitea-interceptor
  namespace: gitea
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
  selector:
    app: gitea-interceptor
---
