gitops/base/gitea/gitea-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
  labels:
    app: gitea-demo
spec:
  ports:
  - name: gitea-http
    port: 3000
    protocol: TCP
  selector:
    app: gitea-demo
  #type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: gitea-demo Deployment.
  labels:
    app: gitea-demo
  name: gitea-demo
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gitea-demo"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: "gitea-demo"
      name: gitea-demo
    spec:
      securityContext:
        runAsUser: 65536
      serviceAccount: pipeline
      terminationGracePeriodSeconds: 60
      containers:
      - image: quay.io/cgruver0/gitea-demo:latest
        imagePullPolicy: Always
        name: gitea-demo
        ports:
        - containerPort: 3000
          name: gitea-http
          protocol: TCP
        - containerPort: 2222
          name: gitea-ssh
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/local/gitea
          name: gitea-storage
        - mountPath: /gitea
          name: gitea-config
        - mountPath: /etc/pki/ca-trust/extracted/pem
          name: trusted-ca
          readOnly: true
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
      volumes:
      - name: gitea-storage
        persistentVolumeClaim:
          claimName: gitea-pvc
      - name: gitea-config
        configMap:
          name: gitea-config
          items:
          - key: app-ini
            path: app.ini
          - key: gitea-config-sh
            path: gitea-config.sh
      - name: trusted-ca
        configMap:
          name: trusted-ca
          items:
            - key: ca-bundle.crt 
              path: tls-ca-bundle.pem
